sandbox/output
NumberParser.java:5: error: cannot find symbol
        int result[] = new int[arr.size()];
                                  ^
  symbol:   method size()
  location: variable arr of type String[]
NumberParser.java:6: error: cannot find symbol
        for(int i = 0; i < arr.size(); i ++) {
                              ^
  symbol:   method size()
  location: variable arr of type String[]
2 errors
